[tool.poetry]
name = "shizengengo100pon"
version = "0.1.0"
description = ""
authors = ["hayashitomoharu <146327155+hayashitomoharu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
